# codeman

./: .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
_bmad-output/implementation-artifacts/: 1-1-set-up-initial-project-from-starter-template.md  1-2-register-a-local-repository.md  1-3-create-a-normalized-repository-snapshot.md  1-4-extract-supported-source-files-into-a-source-inventory.md  1-5-generate-structure-aware-retrieval-chunks.md  1-6-re-index-after-source-or-configuration-changes.md  2-1-build-lexical-index-artifacts.md  2-2-run-lexical-retrieval-against-indexed-chunks.md  2-3-present-agent-friendly-ranked-retrieval-results.md  2-4-build-semantic-retrieval-index-artifacts.md  2-5-run-semantic-retrieval-queries.md  2-6-run-hybrid-retrieval-with-fused-ranking.md  2-7-compare-retrieval-modes-for-the-same-question.md  3-1-define-the-layered-configuration-model.md  3-2-configure-embedding-providers-independently.md  3-3-create-reusable-retrieval-strategy-profiles.md  3-4-record-configuration-provenance-for-every-run.md  3-5-reuse-prior-configurations-in-later-experiments.md  3-6-key-caches-to-configuration-and-content-identity.md  4-1-define-the-golden-query-benchmark-dataset.md  4-2-execute-a-benchmark-run-against-an-indexed-repository.md  4-3-calculate-and-store-retrieval-quality-metrics.md  4-4-generate-benchmark-reports-for-review.md  4-5-compare-benchmark-runs-across-retrieval-strategies.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-03-13.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
docs/: README.md  benchmarks.md  cli-reference.md  project-context.md
migrations/: env.py  script.py.mako
src/codeman/: cli.py  (+4 more)
tests/: test_cli.py
(+245 files in other folders)
