[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codeman"
version = "0.1.0"
description = "Starter Python project for a BMAD-driven workspace."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "vdubyna" }
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11.0",
]

[project.scripts]
codeman = "codeman.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

