[project]
name = "codeman"
version = "0.1.0"
description = "CLI-first retrieval experimentation scaffold for the codeman workspace."
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
  { name = "vdubyna" }
]
dependencies = [
  "alembic>=1.17.2,<1.18.0",
  "pydantic>=2.12.5,<3.0.0",
  "sqlalchemy>=2.0.44,<2.1.0",
  "typer>=0.20.0,<0.21.0",
]

[project.scripts]
codeman = "codeman.cli.app:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.11.0,<0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.codeman]
project_name = "codeman"
default_output_format = "text"

[tool.codeman.runtime]
root_dir_name = ".codeman"
metadata_database_name = "metadata.sqlite3"

[tool.codeman.indexing]
fingerprint_salt = ""

[tool.codeman.semantic_indexing]
vector_engine = "sqlite-exact"
vector_dimension = 16
fingerprint_salt = ""

[tool.codeman.embedding_providers.local_hash]
model_id = "hash-embedding"
model_version = "1"
